force-app/main/default/objects/Product2/fields/Adhesive1__c.field-meta.xml
<CustomField>
    <fullName>Adhesive1__c</fullName>
    <label>Adhesive1</label>
    <length>20</length>
    <type>Text</type>
</CustomField>