force-app/main/default/objects/Product2/fields/Adhesive_Family__c.field-meta.xml
<CustomField>
    <fullName>Adhesive_Family__c</fullName>
    <label>Adhesive Family</label>
    <length>60</length>
    <type>Text</type>
</CustomField>