force-app/main/default/objects/Product2/fields/CPQId__c.field-meta.xml
<CustomField>
    <fullName>CPQId__c</fullName>
    <externalId>true</externalId>
    <label>CPQId</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>