force-app/main/default/objects/Product2/fields/Customer_Code__c.field-meta.xml
<CustomField>
    <fullName>Customer_Code__c</fullName>
    <label>Customer Code</label>
    <length>60</length>
    <type>Text</type>
</CustomField>