force-app/main/default/objects/Product2/fields/Film__c.field-meta.xml
<CustomField>
    <fullName>Film__c</fullName>
    <label>Film</label>
    <length>20</length>
    <type>Text</type>
</CustomField>