force-app/main/default/objects/Product2/fields/FLXId__c.field-meta.xml
<CustomField>
    <fullName>FLXId__c</fullName>
    <label>FLXId</label>
    <length>5</length>
    <type>Text</type>
</CustomField>