force-app/main/default/objects/Product2/fields/Form__c.field-meta.xml
<CustomField>
    <fullName>Form__c</fullName>
    <label>Form</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Roll</fullName>
            </value>
            <value>
                <fullName>Sheet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>