force-app/main/default/objects/Product2/fields/Lead_Time__c.field-meta.xml
<CustomField>
    <fullName>Lead_Time__c</fullName>
    <label>Lead Time</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 Day</fullName>
            </value>
            <value>
                <fullName>2-3 Days</fullName>
            </value>
            <value>
                <fullName>8 + Days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>