force-app/main/default/objects/Product2/fields/Length__c.field-meta.xml
<CustomField>
    <fullName>Length__c</fullName>
    <label>Length</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>