force-app/main/default/objects/Product2/fields/Liner__c.field-meta.xml
<CustomField>
    <fullName>Liner__c</fullName>
    <label>Liner</label>
    <length>60</length>
    <type>Text</type>
</CustomField>