force-app/main/default/objects/Product2/fields/MSIUOP__c.field-meta.xml
<CustomField>
    <fullName>MSIUOP__c</fullName>
    <label>MSIUOP</label>
    <precision>7</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>