force-app/main/default/objects/Product2/fields/Nick_Name__c.field-meta.xml
<CustomField>
    <fullName>Nick_Name__c</fullName>
    <label>Nick Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>