force-app/main/default/objects/Product2/fields/Print_Technology__c.field-meta.xml
<CustomField>
    <fullName>Print_Technology__c</fullName>
    <label>Print Technology</label>
    <length>60</length>
    <type>Text</type>
</CustomField>