force-app/main/default/objects/Product2/fields/Product_Market__c.field-meta.xml
<CustomField>
    <fullName>Product_Market__c</fullName>
    <label>Product Market</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PB</fullName>
            </value>
            <value>
                <fullName>PI</fullName>
            </value>
            <value>
                <fullName>PP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>