force-app/main/default/objects/Product2/fields/Product_SubMarket__c.field-meta.xml
<CustomField>
    <fullName>Product_SubMarket__c</fullName>
    <label>Product SubMarket</label>
    <length>60</length>
    <type>Text</type>
</CustomField>