force-app/main/default/objects/Product2/fields/Product_SubMarket_Category__c.field-meta.xml
<CustomField>
    <fullName>Product_SubMarket_Category__c</fullName>
    <label>Product SubMarket Category</label>
    <length>60</length>
    <type>Text</type>
</CustomField>