force-app/main/default/objects/Product2/fields/ProductPricingId__c.field-meta.xml
<CustomField>
    <fullName>ProductPricingId__c</fullName>
    <label>ProductPricingId</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>