force-app/main/default/objects/Product2/fields/StockType__c.field-meta.xml
<CustomField>
    <fullName>StockType__c</fullName>
    <label>StockType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>QS</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>