force-app/main/default/objects/Product2/fields/ThresholdDiscount__c.field-meta.xml
<CustomField>
    <fullName>ThresholdDiscount__c</fullName>
    <label>ThresholdDiscount</label>
    <precision>10</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>