force-app/main/default/objects/Product2/fields/Topcoat__c.field-meta.xml
<CustomField>
    <fullName>Topcoat__c</fullName>
    <label>Topcoat</label>
    <length>20</length>
    <type>Text</type>
</CustomField>