force-app/main/default/objects/Product2/fields/Trademark__c.field-meta.xml
<CustomField>
    <fullName>Trademark__c</fullName>
    <label>Trademark</label>
    <length>60</length>
    <type>Text</type>
</CustomField>