force-app/main/default/objects/Product2/fields/Unit_Of_Price__c.field-meta.xml
<CustomField>
    <fullName>Unit_Of_Price__c</fullName>
    <label>Unit Of Price</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LNF</fullName>
            </value>
            <value>
                <fullName>LNY</fullName>
            </value>
            <value>
                <fullName>MSI</fullName>
            </value>
            <value>
                <fullName>Roll</fullName>
            </value>
            <value>
                <fullName>Sheet</fullName>
            </value>
            <value>
                <fullName>SQF</fullName>
            </value>
            <value>
                <fullName>SQM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>