force-app/main/default/objects/Product2/fields/Warehouse_Locations__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_Locations__c</fullName>
    <label>Warehouse Locations</label>
    <length>80</length>
    <type>Text</type>
</CustomField>